force-app/main/default/objects/TASKRAY__trDependency__c/TASKRAY__trDependency__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the information for predecessor and successor task relationships.</description>
    <label>TaskRay Dependency</label>
    <nameField>
        <displayFormat>DEPENDENCY-{0}</displayFormat>
        <label>TaskRay Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>