force-app/main/default/objects/TASKRAY__trDependency__c/fields/TASKRAY__trDependencyType__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDependencyType__c</fullName>
    <label>Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finish-To-Start</fullName>
                <default>true</default>
                <label>Finish-To-Start</label>
            </value>
            <value>
                <fullName>Start-To-Start</fullName>
            </value>
            <value>
                <fullName>Finish-To-Finish</fullName>
            </value>
            <value>
                <fullName>Start-To-Finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>