force-app/main/default/objects/TASKRAY__trDependency__c/fields/TASKRAY__trSuccessorTask__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trSuccessorTask__c</fullName>
    <label>Successor Task</label>
    <referenceTo>TASKRAY__Project_Task__c</referenceTo>
    <relationshipLabel>TaskRay Dependencies</relationshipLabel>
    <relationshipName>Predecessor_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>