force-app/main/default/objects/TASKRAY__trDependency__c/fields/TASKRAY__trTemplateSource__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTemplateSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Source</label>
    <referenceTo>TASKRAY__trDependency__c</referenceTo>
    <relationshipLabel>Cloned Dependencies</relationshipLabel>
    <relationshipName>Template_Source</relationshipName>
    <type>Lookup</type>
</CustomField>